--- a/vehicles-frontend/src/app/components/vehicle-form/vehicle-form.component.less
+++ b/vehicles-frontend/src/app/components/vehicle-form/vehicle-form.component.less
@@ -9,18 +9,26 @@
   border-radius: 8px;
   z-index: 1001;
   min-width: 300px;
+  h2 {
+    margin-top: 0;
+  }
   form {
     display: block;
-    label {
+    .field {
       display: grid;
+      position: relative;
       grid-template-columns: 70px calc(100% - 70px);
       margin-bottom: 10px;
+      label {
+        text-transform: capitalize;    
+      }
       input {
         border: transparent;
         border-bottom: lightgray 1px solid;
       }
     }
     .button-container {
+      margin-top: 30px;
       position: relative;
       display: grid;
       grid-column-gap: 10px;
